--- a/package.json
+++ b/package.json
@@ -17,13 +17,11 @@
 		"express": "4.15.2",
 		"react": "15.4.2",
 		"react-dom": "^15.4.2",
-		"graphql-tag": "^1.3.2",
-    	"apollo-client": "^1.0.0-rc.6",
-    	"apollo-local-query": "^0.3.0",
+		"react-apollo": "^1.0.1",
+		"graphql-tag": "^2.0.0",		
+    	"apollo-client": "^1.0.3",
 		"webpack": "^2.3.2",
 		"body-parser": "1.17.1",
-		"react-tap-event-plugin": "^2.0.1",
-		"material-ui-icons": "^1.0.0-alpha.2",
 		"react-router": "4.1.1",
 		"react-router-dom": "^4.1.1",
 		"react-bootstrap": "^0.30.8"
