--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
 		"body-parser": "1.17.1",
 		"react-router": "4.1.1",
 		"react-router-dom": "^4.1.1",
-		"react-bootstrap": "^0.30.8"
+		"react-bootstrap": "^0.30.8",
+		"request":"2.81.0",
+		"express-session": "1.15.3"
 	},
 	"devDependencies": {
 		"babel-watch": "2.0.5",
