--- a/package.json
+++ b/package.json
@@ -4,32 +4,35 @@
 	"scripts": {
 		"start": "babel-node ./src/app.js",
 		"dev": "babel-node ./src/app.js -- -d",
-		"watch": "babel-watch ./src/app.js -- -d"
+		"watch": "babel-watch ./src/app.js -- -d",
+		"debug": "babel-node ./src/app.js --inspect -d"
 	},
 	"dependencies": {
 		"babel-cli": "6.11.4",
-    	"babel-core": "^6.13.2",
-    	"babel-loader": "^6.2.5",
+		"babel-core": "^6.13.2",
+		"babel-loader": "^6.2.5",
 		"babel-preset-es2015": "^6.13.2",
-    	"babel-preset-react": "^6.11.1",
-    	"babel-preset-stage-0": "^6.5.0",
-    	"babel-runtime": "^6.11.6",
+		"babel-preset-react": "^6.11.1",
+		"babel-preset-stage-0": "^6.5.0",
+		"babel-runtime": "^6.11.6",
 		"express": "4.15.2",
 		"react": "15.4.2",
 		"react-dom": "^15.4.2",
 		"react-apollo": "^1.0.1",
-		"graphql-tag": "^2.0.0",		
-    	"apollo-client": "^1.0.3",
-		"webpack": "^2.3.2",
+		"graphql-tag": "^2.0.0",
+		"apollo-client": "^1.0.3",
+		"webpack": "^2.6.1",
 		"body-parser": "1.17.1",
 		"react-router": "4.1.1",
 		"react-router-dom": "^4.1.1",
 		"react-bootstrap": "^0.30.8",
-		"request":"2.81.0",
+		"request": "2.81.0",
 		"express-session": "1.15.3"
 	},
 	"devDependencies": {
 		"babel-watch": "2.0.5",
-		"webpack-dev-middleware": "1.10.1"
+		"webpack-dev-middleware": "1.10.2",
+		"css-loader": "0.28.4",
+		"style-loader": "0.18.2"
 	}
 }
