--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"debug": "babel-node ./src/app.js --inspect -d"
 	},
 	"dependencies": {
+		"apollo-client": "^1.0.3",
 		"babel-cli": "6.11.4",
 		"babel-core": "^6.13.2",
 		"babel-loader": "^6.2.5",
@@ -15,24 +16,24 @@
 		"babel-preset-react": "^6.11.1",
 		"babel-preset-stage-0": "^6.5.0",
 		"babel-runtime": "^6.11.6",
-		"express": "4.15.2",
-		"react": "15.4.2",
-		"react-dom": "^15.4.2",
-		"react-apollo": "^1.0.1",
-		"graphql-tag": "^2.0.0",
-		"apollo-client": "^1.0.3",
-		"webpack": "^2.6.1",
 		"body-parser": "1.17.1",
-		"react-router": "4.1.1",
-		"react-router-dom": "^4.1.1",
+		"css-loader": "0.28.4",
+		"express": "4.15.2",
+		"express-session": "1.15.3",
+		"graphql-tag": "^2.0.0",
+		"react": "^15.4.2",
+		"react-apollo": "^1.0.1",
 		"react-bootstrap": "^0.30.8",
+		"react-dom": "^15.4.2",
+		"react-router": "4.1.1",
+		"react-router-config": "^1.0.0-beta.3",
+		"react-router-dom": "^4.1.1",
 		"request": "2.81.0",
-		"express-session": "1.15.3"
+		"style-loader": "0.18.2",
+		"webpack": "^2.6.1"
 	},
 	"devDependencies": {
 		"babel-watch": "2.0.5",
-		"webpack-dev-middleware": "1.10.2",
-		"css-loader": "0.28.4",
-		"style-loader": "0.18.2"
+		"webpack-dev-middleware": "1.10.2"
 	}
 }
