--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"css-loader": "0.28.4",
 		"express": "4.15.2",
 		"express-session": "1.15.3",
-		"graphql-tag": "^2.0.0",
+		"graphql-tag": "^2.4.2",
 		"react": "^15.4.2",
 		"react-apollo": "^1.0.1",
 		"react-bootstrap": "^0.30.8",
@@ -30,7 +30,8 @@
 		"react-router-dom": "^4.1.1",
 		"request": "2.81.0",
 		"style-loader": "0.18.2",
-		"webpack": "^2.6.1"
+		"webpack": "^2.6.1",
+		"immutability-helper": "2.3.0"
 	},
 	"devDependencies": {
 		"babel-watch": "2.0.5",
