--- a/package.json
+++ b/package.json
@@ -2,24 +2,20 @@
 	"name": "akseli",
 	"version": "0.0.0",
 	"scripts": {
-		"start": "babel-node ./src/app.js",
-		"dev": "babel-node ./src/app.js -- -d",
+		"start": "npm run build-production && cd dist && node ./akseli.js",
+		"docker-start": "cd dist && node ./akseli.js",
+		"build-dev": "webpack --config webpack.client.config.js && webpack --config webpack.server.config.js",
+		"build-production": "webpack -p --config webpack.client.config.js && webpack --config webpack.server.config.js",
+		"dev": "babel-node ./src/dev.js",
 		"watch": "babel-watch ./src/app.js -- -d",
 		"debug": "babel-node ./src/app.js --inspect -d"
 	},
 	"dependencies": {
-		"apollo-client": "^1.0.3",
-		"babel-cli": "6.11.4",
-		"babel-core": "^6.13.2",
-		"babel-loader": "^6.2.5",
-		"babel-preset-es2015": "^6.13.2",
-		"babel-preset-react": "^6.11.1",
-		"babel-preset-stage-0": "^6.5.0",
-		"babel-runtime": "^6.11.6",
+		"apollo-client": "^1.9.2",
 		"body-parser": "1.17.1",
 		"css-loader": "0.28.4",
 		"express": "4.15.2",
-		"express-session": "1.15.3",
+		"express-session": "1.15.5",
 		"graphql-tag": "^2.4.2",
 		"react": "^15.4.2",
 		"react-apollo": "^1.0.1",
@@ -34,7 +30,20 @@
 		"immutability-helper": "2.3.0"
 	},
 	"devDependencies": {
+		"babel-cli": "6.11.4",
+		"babel-core": "^6.13.2",
+		"babel-eslint": "7.2.3",
+		"babel-loader": "^6.2.5",
+		"babel-preset-es2015": "^6.13.2",
+		"babel-preset-react": "^6.11.1",
+		"babel-preset-stage-0": "^6.5.0",
+		"babel-runtime": "^6.11.6",
 		"babel-watch": "2.0.5",
+		"eslint": "4.4.1",
+		"eslint-plugin-flowtype": "2.35.0",
+		"eslint-plugin-import": "2.7.0",
+		"eslint-plugin-jest": "20.0.3",
+		"eslint-plugin-react": "^7.3.0",
 		"webpack-dev-middleware": "1.10.2"
 	}
 }
