--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"request": "2.81.0",
 		"style-loader": "0.18.2",
 		"webpack": "^2.6.1",
-		"immutability-helper": "2.3.0"
+		"immutability-helper": "2.3.0",
+		"styled-components": "2.1.2"
 	},
 	"devDependencies": {
 		"babel-cli": "6.11.4",
