--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
 		"build-production": "webpack -p --config webpack.client.config.js && webpack --config webpack.server.config.js",
 		"dev": "babel-node ./src/dev.js",
 		"watch": "babel-watch ./src/app.js -- -d",
-		"debug": "babel-node ./src/app.js --inspect -d"
+		"debug": "babel-node ./src/app.js --inspect -d",
+		"bump-patch": "grunt bump:patch",
+		"bump-minor": "grunt bump:minor",
+		"bump-major": "grunt bump:major"
 	},
 	"dependencies": {
 		"apollo-client": "^1.9.2",
