--- a/deployment/templates/akseli-deployment.yaml
+++ b/deployment/templates/akseli-deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   labels:
     app: akseli
 spec:
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 2
+      maxUnavailable: 0
   template:
     metadata:
       labels:
