--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"es6-weak-map": "^2.0.2",
 		"graphql": "^0.12.3",
 		"graphql-tag": "^2.8.0",
-		"petri-client": "^0.0.14",
+		"petri-client": "^0.0.38",
 		"react": "^16.2.0",
 		"react-apollo": "^2.1.1",
 		"react-bootstrap": "^0.32.1",
@@ -18,7 +18,8 @@
 		"react-router": "^4.2.0",
 		"react-router-bootstrap": "^0.24.4",
 		"react-router-dom": "^4.2.2",
-		"react-scripts-ts": "2.14.0"
+		"react-scripts-ts": "2.14.0",
+		"lodash.merge": "^4.6.1"
 	},
 	"scripts": {
 		"start": "env-cmd ./config.env react-scripts-ts start",
@@ -29,8 +30,7 @@
 		"bump-minor": "grunt bump:minor",
 		"bump-major": "grunt bump:major",
 		"clean": "rimraf build && rimraf node_modules",
-		"build-schema-types":
-			"apollo-codegen generate src/servergql/**/*.ts* --schema node_modules/petri-client/schema.json --target typescript --output src/types/operation-results-types.ts"
+		"build-schema-types": "apollo-codegen generate src/servergql/**/*.ts* --schema node_modules/petri-client/schema.json --target typescript --output src/types/operation-results-types.ts"
 	},
 	"devDependencies": {
 		"@types/jest": "^22.2.2",
